# grafana-telegram-bot

./: .gitignore  Dockerfile  a.txt  endpoint_collect.py  main.py  pyproject.toml
.github/workflows/: monitoramento-coleta.yml
app/: action_manager.py  authentication.py  browser.py  collect_data.py  dashboard_xpaths.py  data_processing.py  execute_download_actions.py  main.py  monitor_falhas.py  process_dashboard.py  schedule.py  schedule_regular.py  send_telegram_msg.py
app/actions/: execute_download_actions.py
app/browser/: browser.py  dashboard_xpaths.py  window_helper.py
app/celery/: celery_app.py
app/duckdb/: data_processing.py
app/src/: collect_data.py  monitor_falhas.py  process_dashboard.py  send_telegram_msg.py
data/: Fila de execuções no período-data-2024-07-29 14_18_25.csv  relatorio.csv
src/: api.py  main.py  test.py  test2.py  test3.py  test4.py  test5.py
